--- a/showtimeDuranjo/static/css/base.css
+++ b/showtimeDuranjo/static/css/base.css
@@ -22,14 +22,15 @@ h1{
 
 /* HEADER */
 header{
-	background: #30bdea; /* Old browsers */
-	background: -moz-linear-gradient(top,  #30bdea 1%, #b5dfef 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#30bdea), color-stop(100%,#b5dfef)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #30bdea 1%,#b5dfef 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #30bdea 1%,#b5dfef 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #30bdea 1%,#b5dfef 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #30bdea 1%,#b5dfef 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#30bdea', endColorstr='#b5dfef',GradientType=0 ); /* IE6-9 */
+background: #0e0519; /* Old browsers */
+background: -moz-linear-gradient(top,  #0e0519 0%, #131963 82%, #e06800 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0e0519), color-stop(82%,#131963), color-stop(100%,#e06800)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #0e0519 0%,#131963 82%,#e06800 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0519', endColorstr='#e06800',GradientType=0 ); /* IE6-9 */
+
 
 	display: inline-block;
 	width: 100%;
@@ -424,128 +425,6 @@ footer{
 	background: -webkit-gradient(linear, 0 0, 0 100%, color-stop(0.02, #9FE355), color-stop(0.02, #79BF4A), color-stop(1, #599F2F));
 }
 
-/* Configuración NUBES */
-/*Time to finalise the cloud shape*/
-.cloud {
-	width: 200px; height: 60px;
-	background: #fff;
-	
-	-moz-border-radius: 200px;
-	-webkit-border-radius: 200px;
-	border-radius: 200px;
-	
-	position: absolute;
-	top: 200px; 
-}
-
-.cloud:before, .cloud:after {
-	content: '';
-	position: absolute; 
-	background: #fff;
-	width: 100px; height: 80px;
-	top: -15px; 
-	left: 10px;
-	
-	-moz-border-radius: 100px;
-	-webkit-border-radius: 100px;
-	border-radius: 100px;
-	
-	-webkit-transform: rotate(30deg);	
-	-moz-transform: rotate(30deg);
-	transform: rotate(30deg);
-}
-
-.cloud:after {
-	width: 120px; height: 120px;
-	top: -55px; left: auto; right: 15px;
-}
-
-/*Time to animate*/
-.x1 {
-	-webkit-animation: moveclouds 30s linear infinite;
-	-moz-animation: moveclouds 30s linear infinite;
-	-o-animation: moveclouds 30s linear infinite;
-}
-
-/*variable speed, opacity, and position of clouds for realistic effect*/
-.x2 {
-	left: 200px;
-	
-	-webkit-transform: scale(0.6);
-	-moz-transform: scale(0.6);
-	transform: scale(0.6);
-	opacity: 0.6; /*opacity proportional to the size*/
-	
-	/*Speed will also be proportional to the size and opacity*/
-	/*More the speed. Less the time in 's' = seconds*/
-	-webkit-animation: moveclouds 50s linear infinite;
-	-moz-animation: moveclouds 50s linear infinite;
-	-o-animation: moveclouds 50s linear infinite;
-}
-
-.x3 {
-	left: 300px;
-	top: 45px;
-	
-	-webkit-transform: scale(0.8);
-	-moz-transform: scale(0.8);
-	transform: scale(0.8);
-	opacity: 0.8; /*opacity proportional to the size*/
-	
-	-webkit-animation: moveclouds 40s linear infinite;
-	-moz-animation: moveclouds 40s linear infinite;
-	-o-animation: moveclouds 40s linear infinite;
-}
-
-.x4 {
-	left: 470px;
-	top: 330px;
-	
-	-webkit-transform: scale(0.75);
-	-moz-transform: scale(0.75);
-	transform: scale(0.75);
-	opacity: 0.75; /*opacity proportional to the size*/
-	
-	-webkit-animation: moveclouds 36s linear infinite;
-	-moz-animation: moveclouds 36s linear infinite;
-	-o-animation: moveclouds 36s linear infinite;
-}
-
-.x5 {
-	left: -150px;
-	top: 275px;
-	
-	-webkit-transform: scale(0.8);
-	-moz-transform: scale(0.8);
-	transform: scale(0.8);
-	opacity: 0.8; /*opacity proportional to the size*/
-	
-	-webkit-animation: moveclouds 40s linear infinite;
-	-moz-animation: moveclouds 40s linear infinite;
-	-o-animation: moveclouds 40s linear infinite;
-}
-
-.x6 {
-	left: 500px;
-	top: 275px;
-
-	-webkit-animation: moveclouds 60s linear infinite;
-	-moz-animation: moveclouds 60s linear infinite;
-	-o-animation: moveclouds 60s linear infinite;
-}
-
-@-webkit-keyframes moveclouds {
-	0% {margin-left: 1400px;}
-	100% {margin-left: -1400px;}
-}
-@-moz-keyframes moveclouds {
-	0% {margin-left: 1400px;}
-	100% {margin-left: -1400px;}
-}
-@-o-keyframes moveclouds {
-	0% {margin-left: 1400px;}
-	100% {margin-left: -1400px;}
-}
 
 /* Configuración back to top button */
 
