--- a/showtimeDuranjo/static/css/base.css
+++ b/showtimeDuranjo/static/css/base.css
@@ -1,12 +1,15 @@
 @charset 'utf-8';
 body{
 	margin: 0;
+	background: black;
+	color: white;
 }
 img{
 	width: auto;
 	height: auto;
 }
 a img {border: none; }
+
 h1{
 	margin: 0;
 	color: white;
@@ -20,352 +23,16 @@ h1{
 	margin: 0 auto 0 auto;
 }
 
-/* HEADER */
-header{
-background: #0e0519; /* Old browsers */
-background: -moz-linear-gradient(top,  #0e0519 0%, #131963 82%, #e06800 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#0e0519), color-stop(82%,#131963), color-stop(100%,#e06800)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  #0e0519 0%,#131963 82%,#e06800 100%); /* IE10+ */
-background: linear-gradient(to bottom,  #0e0519 0%,#131963 82%,#e06800 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0519', endColorstr='#e06800',GradientType=0 ); /* IE6-9 */
-
-
-	display: inline-block;
-	width: 100%;
-	position: relative;
-	overflow: hidden;
-}
-header .wrapper{
-	position: relative;
-}
-.logoconbuenpie{
-	margin-top: 175px;
+/*HEADER*/
+.redeSociales{
 	text-align: right;
-	position: relative;
-	z-index: 10;
 }
-nav{
-	margin-right: 5%;
-	margin-top: 25px;
-	margin-bottom: 10px;
-	text-align: right;
-	position: relative;
-	z-index: 10;
-}
-nav ul{
-	margin: 0;
-	padding: 0
-}
-nav ul li{
-	display: inline-block;
-}
-nav ul li a{
-	color: #444447;
-	font-size: 1.5em;
-	margin-right: 15px;
-	text-transform: uppercase;
-	text-decoration: none;
-}
-/* end header */
-.contenido{
-	background: #29632B;
-}
-/* == GRAMA == */
-.grama{
-	background: #A6C83C; /* Old browsers */
-	background: -moz-linear-gradient(top,  #A6C83C 1%, #759C2C 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#A6C83C), color-stop(100%,#759C2C)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #A6C83C 1%,#759C2C 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #A6C83C 1%,#759C2C 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #A6C83C 1%,#759C2C 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #A6C83C 1%,#759C2C 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A6C83C', endColorstr='#759C2C',GradientType=0 ); /* IE6-9 */
-
-	position: relative;
-	text-align: right;
-	padding-top: 10px;
-	padding-bottom: 80px;
-}
-.grama > .wrapper{
-	position: relative;
-}
-.presentadores{
-	background: url(../img/presentadores.png) no-repeat center;
-	position: absolute;
-	width: 508px;
-	height: 490px;
-	top: -290px;
-	z-index: 5;
-}
-.tituloPrincipal{
-	width: 57%;
-	margin-left: 43%;
-}
-.rayagris{
-	position: absolute;
-	top: 82px;
-	background: #C8CFCC;
-	height: 40px;
-	width: 100%;
-	border-bottom: 3px solid #767A6E;
-	box-shadow: 0 7px 0 #2D3B2B;
-}
-
-/* ==  Transmisión == */
-.transmision p{
-	text-align: right;
-	color: #FFF;
-	font-size: 1.5em;
-	text-shadow: 1px 1px 1px #000;
-}
-.reproducto{
-	height: 500px;
-	width: 850px;
-	background: black;
-	margin: 0 auto 0 auto;
-}
-/* ==  Galería == */
-.aboutus{
-	margin-top: 50px;
-	background: url(../img/notasmusicales.png) no-repeat;
-	background-position: bottom;
-}
-.aboutus  .galeria{
-	width: 62%;
-	display: inline-block;
-	vertical-align: top;
-	padding-top: 40px;
-}
-.aboutus .info{
-	padding: 0 0 0 40px;
-	vertical-align: top;
-	display: inline-block;
-	width: 34%;
-	color: white;
-	position: relative;
-}
-.info p{
-	font-size: 1.1em;
-	text-align: justify;
-	padding-right: 20px;
-}
-.titulo{
-	text-transform: uppercase;
-	font-size: 2.5em;
-}
-.mataCosita{
-	position: absolute;
-	top: -22px;
-	left: -4px;
-	background: url(../img/cositas.png) 0 0;
-	width: 75px;
-	height: 80px;
-	z-index: 1;
-}
-.mataCosita3{
-	position: absolute;
-	top: -32px;
-	left: 80%;
-	background: url(../img/cositas.png) 35px 0;
-	width: 35px;
-	height: 70px;
-	z-index: 1;
-}
-.sliderPosition{
-	width: 635px;
-	height: 475px;
-}
-.endless_page_template ul{
-	list-style: none;
-}
-.endless_page_template ul li{
-	display: inline-block;
-}
-.endless_page_template ul li a img{
-	width: 150px;
-}
-.foto{
-	width: 150px;
-	height: 125px;
-}
-.logoblanco{
-	background: url(../img/logoengaleria.png) no-repeat 0 0;
-	height: 85px;
-	margin: 0 auto 30px auto;
-}
-.pajaritos{
-	background: url(../img/pajaros.png) no-repeat;
-	width: 506px;
-	height: 196px;
-}
-.imagenGrande{
-	position: relative;
-	background: url(../img/cuadro.png) no-repeat;
-	width: 632px;
-	height: 475px;
-	padding: 4%;
-	margin-bottom: 50px;
-	z-index: 5;
-	text-align: center;
-}
-.imagenGrande > img{
-	max-width: 634px;
-	max-height: 473px;
-	vertical-align: middle;
-}
-/* ==  Contacto == */
-.infoContacto{color: white}
-.cercaBlanca{
-	background: url(../img/cerca.png);
-	width: 100%;
-	height: 102px;
-	border-bottom: 10px solid #C9D8C9;
-}
-.contacto{
-	background: url(../img/texturacontacto.jpg);
-	padding: 50px 0;
-
-}
-.contacto > .wrapper{
-	position: relative;
-}
-.contacto .titulo{
-	margin: 0;
-}
-.sectionContacto{
-	position: relative;
-	vertical-align: top;
-	display: inline-block;
-	width: 33%;
-}
-form .sectionContacto{
-	width: 49%;
-}
-.sectionContacto, form{
-	margin-top: 30px;
-}
-.mataCosita2{
-	position: absolute;
-	top: -60px;
-	left: -30px;
-	background: url(../img/cositas.png) 119px 0;
-	width: 75px;
-	height: 80px;
-	z-index: 1;
-}
-form{
-	width: 66%;
-	display: inline-block;
-}
-/* FORM CONTACTO CSS*/
-.tituloContacto{
-	font-size: 1.5em;
-	margin-bottom: 10px;
-}
-.campo{
-	margin: 0 auto 10px auto;
-}
-
-.campo input{
-	background: #E6E7E7;
-	border: 1px solid #CCCCCC;
-	text-indent: 5px;
-	height: 33px;
-	width: 84%;
-}
-.campo input, textarea{
-	border-radius: 10px;
-}
-.campo label{
-	float: left;
-	width: 350px;
-	margin-bottom: 3px;
-}
-textarea{
-	background: #E6E7E7;
-	border: 1px solid #CCCCCC;
-	width: 84%;
-}
-.errorlist{
-	border: 1px solid #F00;
-	background: #FFC0CB;
-	color: #F00;
-	list-style: none;
-	margin: 10px 0;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	width: 82%;
-	text-shadow: 0px 1px rgba(255, 255, 255, 0.5);
-	padding: 10px 0 10px 2%;
-}
-.enviado{
-	border: 1px solid #008000;
-	background: lightgreen;
-	color: #008000;
-	margin: 10px 0;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	width: 82%;
-	text-shadow: 0px 1px rgba(255, 255, 255, 0.5);
-	padding: 10px 0 10px 2%;
-}
-input[type="submit"]{
-	margin-top: 10px;
-	background: #3F8F25;
-	padding: 5px 20px;
-	border: none;
-	color: whitesmoke;
-	text-transform: uppercase;
-}
-/* end form contacto css*/
-
-.infoContacto{
-	padding-top: 30px;
-}
-.cajaIzquierda, .cajaDerecha{
-	width: 60%;
-	margin: 0 auto 0 auto;
-}
-.tituloOpcionInfo{
-	background: #3F8F25;
-	box-shadow: 3px 3px 1px #000;
-	font-size: 1.2em;
-	width: 85%;
-	text-indent: 15px;
-	font-weight: bold;
-	padding: 5px 0;
-}
-.infoOpcion{
-	text-align: left;
-	font-size: 1.2em;
-	margin-top: 10px;
-	margin-bottom: 20px;
-}
-.telefonosNumeros{
-	list-style: none;
-	margin:0;
-}
-.infoDerecha{
-	display: inline-block;
-	width: 49.55%;
-}
-.infoIzquierda{
-	vertical-align: top;
-	display: inline-block;
-	width: 49.55%;
-}
-.opcionInfo{
-	position: relative;
-}
-
 
 /* FOOTER */
 footer{
-	color: white;
-	background: #634A11;
-	border-top: 5px solid #866C44;
+	color: #FFF;
+	background: #582B5B;
+	border-top: 5px solid #7D3C81;
 }
 .fraseFooter{
 	text-align: center;
