--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -36,7 +36,12 @@
 	</script> -->
 <header id="home" class="cabecera">	
 	<div class="wrapper">
-		<div class="redeSociales">Probando</div>
+		<div class="redeSociales">
+			<div class="twitterlogo"></div>
+			<div class="facebook"></div>
+			<div class="googleplus"></div>
+			<div class="instagram"></div>
+		</div>
 	</div>
 	{% block navi %}
 	<nav class="ph-line-nav">
