--- a/showtimeDuranjo/static/css/flexslider.css
+++ b/showtimeDuranjo/static/css/flexslider.css
@@ -25,7 +25,7 @@
 
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block; max-height: 475px}
+.flexslider .slides img {width: 100%; display: block; max-height: 500px}
 .flexslider .cat img {width: 90%;}
 .flexslider .slideUno img {width: 510px;
 height: 322px;}
@@ -61,11 +61,11 @@ html[xmlns] .slides {display: block;}
 .flex-direction-nav .flex-disabled {cursor: default;}
 
 /* Control Nav */
-.flex-control-nav {width: 100%; position: absolute; bottom: -40px; text-align: center;}
+.flex-control-nav {width: 100%; position: absolute; bottom: 0; text-align: left;}
 .flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
-.flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; box-shadow: inset 0 0 3px rgba(0,0,0,0.3);}
+.flex-control-paging li a {width: 11px; height: 11px; display: block; background: #FFF; background: rgba(255, 255, 255, 0.81); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; box-shadow: inset 0 0 3px rgba(0,0,0,0.3);}
 .flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
-.flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }
+.flex-control-paging li a.flex-active { background: #9529A3; background: rgba(213, 50, 226, 0.9); cursor: default; }
 
 .flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
 .flex-control-thumbs li {width: 25%; float: left; margin: 0;}
