--- a/showtimeDuranjo/static/css/flexslider.css
+++ b/showtimeDuranjo/static/css/flexslider.css
@@ -25,7 +25,7 @@
 
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block; max-height: 500px}
+.flexslider .slides img {width: 100%; display: block; max-height: 550px;}
 .flexslider .cat img {width: 90%;}
 .flexslider .slideUno img {width: 510px;
 height: 322px;}
