--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="barraNavegacion">
 				<a href="{% url 'homepageindex' %}">Inicio</a>
-				<a href="#galeria">Galería</a>
+				<a href="{% url 'galeriagaleria' %}">Galería</a>
 				<a href="{% url 'homepageradio' %}">Radio</a>
 				<a href="#galeria">Noticias</a>
 				<a href="{% url 'homepagecontacto' %}">Contacto</a>
