--- a/showtimeDuranjo/templates/base.html
+++ b/showtimeDuranjo/templates/base.html
@@ -53,7 +53,7 @@
 				<a href="{% url 'homepageindex' %}">Inicio</a>
 				<a href="{% url 'galeriagaleria' %}">Galería</a>
 				<a href="{% url 'homepageradio' %}">Radio</a>
-				<a href="#galeria">Noticias</a>
+				<a href="/weblog">Noticias</a>
 				<a href="{% url 'homepagecontacto' %}">Contacto</a>
 				<div class="effect"></div>
 			</div>
