--- a/showtimeDuranjo/static/css/homepage/index.css
+++ b/showtimeDuranjo/static/css/homepage/index.css
@@ -57,7 +57,7 @@ h1{
 	z-index: 1;
 }
 .textonoticia{
-	height: 73px;
+	height: 56px;
 	overflow: hidden;
 }
 
@@ -73,6 +73,9 @@ h1{
 .ultimasNoticias .tituloNoticia{
 	border-bottom: 2px solid white;
 	font-size: 1.3em;
+	height: 52px;
+	text-align: center;
+	overflow: hidden;
 }
 .ultimasNoticias p, .sinopsis p{
 	text-align: justify;
